--- a/frontend/src/styles/PhraseBox.css
+++ b/frontend/src/styles/PhraseBox.css
@@ -43,7 +43,7 @@
 }
 .phrase-add-translation{
     margin-left: 65%;
-    margin-top: -55px;
+    margin-top: -80px;
     color: black;
     background-color: rgb(170, 231, 240);
     padding: 5px;
